--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,17 +1,9 @@
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consulta de Producto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
-</head>
 
 <body>
+    <div style="text-align: center;"><h1>PRODUCTOS</h1></div>
     <main>
         <div class="nuevo-producto">
-            <a class="btn btn-success" id="new" style="float: right; margin-right: 2px;" href="">
+            <a class="btn btn-success" id="new" style="float: right; margin-right: 2px;" [routerLink]="['/productos/createProducto']">
                 <i class="fa-solid fa-notes-medical"></i> Nuevo producto
             </a>
         </div>
@@ -37,17 +29,10 @@
                     </tr>
                 </thead>
                 <tbody>
-            
-                        <tr>
-                            <td>
-                              
-                            </td>
-                            <td>
-                               
-                            </td>
-                            <td>
-                                
-                            </td>
+                        <tr *ngFor="let producto of productos">
+                            <th scope="row">{{producto.producto}} </th>
+                            <td>{{producto.existencia}}</td>
+                            <td>{{producto.categoria.categoria}}</td>
                             <td class="td_boton">
                                 <a href=""
                                     class="edit-btn" data-bs-toggle="modal" data-bs-target="#editarModal"
@@ -63,6 +48,7 @@
                 </tbody>
             </table>
         </div>
+        <a [routerLink]="[ './create']">hola</a>
     </main>
     <div class="modal fade" id="editarModal" tabindex="-1" aria-labelledby="editarModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -103,10 +89,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"crossorigin="anonymous"></script>
-    
     <script>
         $(document).ready(function () {
             $('#ProductoTable').DataTable();
@@ -181,5 +163,8 @@
             });
         });
     </script>
+    
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.all.min.js"></script>
 </body>
+
+<router-outlet></router-outlet>
