agregando sidebar y crud de clientes

--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,170 +1,118 @@
+<app-sidebar></app-sidebar>
+<div style="text-align: center"><h1>PRODUCTOS</h1></div>
+<main>
+  <div class="nuevo-producto">
+    <a
+      class="btn btn-success"
+      id="new"
+      style="float: right; margin-right: 2px"
+      [routerLink]="['/productos/createProducto']"
+    >
+      <i class="fa-solid fa-notes-medical"></i> Nuevo producto
+    </a>
+  </div>
+  <div class="userList" id="userList">
+    <table id="ProductoTable" class="table table-hover table-striped">
+      <thead>
+        <tr>
+          <th>
+            <i class="fa-solid fa-pen-to-square" style="color: #e63946"></i>
+            Producto
+          </th>
+          <th>
+            <i class="fa-solid fa-boxes-stacked" style="color: #e63946"></i>
+            Existencia
+          </th>
 
-<body>
-    <div style="text-align: center;"><h1>PRODUCTOS</h1></div>
-    <main>
-        <div class="nuevo-producto">
-            <a class="btn btn-success" id="new" style="float: right; margin-right: 2px;" [routerLink]="['/productos/createProducto']">
-                <i class="fa-solid fa-notes-medical"></i> Nuevo producto
+          <th>
+            <i class="fa-solid fa-list" style="color: #e63946"></i>
+            Categoria
+          </th>
+          <th>
+            <i class="fa-solid fa-bolt" style="color: #e63946"></i>
+            Acciones
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let producto of productos">
+          <th scope="row">{{ producto.producto }}</th>
+          <td>{{ producto.existencia }}</td>
+          <td>{{ producto.categoria.categoria }}</td>
+          <td class="td_boton">
+            <a
+              href=""
+              class="edit-btn"
+              data-bs-toggle="modal"
+              data-bs-target="#editarModal"
+              data-cliente=""
+              >Editar
             </a>
-        </div>
-        <div class="userList" id="userList">
-            <table id="ProductoTable" class="table table-hover table-striped">
-                <thead>
-                    <tr>
-                        <th>
-                            <i class="fa-solid fa-pen-to-square" style="color: #e63946;"></i>
-                            Producto
-                        </th>
-                        <th>
-                            <i class="fa-solid fa-boxes-stacked" style="color: #e63946;"></i>
-                            Existencia
-                        <th>
-                            <i class="fa-solid fa-list" style="color: #e63946;"></i>
-                            Categoria
-                        </th>
-                        <th>
-                            <i class="fa-solid fa-bolt" style="color: #e63946;"></i>
-                            Acciones
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                        <tr *ngFor="let producto of productos">
-                            <th scope="row">{{producto.producto}} </th>
-                            <td>{{producto.existencia}}</td>
-                            <td>{{producto.categoria.categoria}}</td>
-                            <td class="td_boton">
-                                <a href=""
-                                    class="edit-btn" data-bs-toggle="modal" data-bs-target="#editarModal"
-                                    data-cliente=''>Editar
-                                </a>
-                                <a id="EliminarUsuario"
-                                    href=""
-                                    class="delete-btn">Eliminar
-                                </a>
-                            </td>
-                        </tr>
-                    
-                </tbody>
-            </table>
-        </div>
-        <a [routerLink]="[ './create']">hola</a>
-    </main>
-    <div class="modal fade" id="editarModal" tabindex="-1" aria-labelledby="editarModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="editarModalLabel">Datos del producto</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="editForm" action="" method="POST">
-                        <div>
-                            <label for="editProducto">Nombre de producto </label>
-                            <input type="text" id="editProducto" name="editProducto" placeholder="Ingrese el nombre del producto">
-                        </div>
-                        <br>
-                        <div>
-                            <label for="editCategoria">Categoria </label>
-                            <select id="editCategoria" name="editCategoria">
-                               
-                                    <option value=""> </option>
-                                
-                            </select>
-                        </div>
-                        <br>
-                        <div>
-                            <label for="editExistencia">Existencia </label>
-                            <input type="text" id="editExistencia" name="editExistencia"
-                                placeholder="Ingrese la existencia">
-                        </div>
-                        <br>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button id="guardarCambiosBtn" type="button" class="btn btn-primary">Editar</button>
-                </div>
-            </div>
-        </div>
+            <a id="EliminarUsuario" href="" class="delete-btn">Eliminar </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <a [routerLink]="['./create']">hola</a>
+</main>
+<div
+  class="modal fade"
+  id="editarModal"
+  tabindex="-1"
+  aria-labelledby="editarModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editarModalLabel">Datos del producto</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form id="editForm" action="" method="POST">
+          <div>
+            <label for="editProducto">Nombre de producto </label>
+            <input
+              type="text"
+              id="editProducto"
+              name="editProducto"
+              placeholder="Ingrese el nombre del producto"
+            />
+          </div>
+          <br />
+          <div>
+            <label for="editCategoria">Categoria </label>
+            <select id="editCategoria" name="editCategoria">
+              <option value=""></option>
+            </select>
+          </div>
+          <br />
+          <div>
+            <label for="editExistencia">Existencia </label>
+            <input
+              type="text"
+              id="editExistencia"
+              name="editExistencia"
+              placeholder="Ingrese la existencia"
+            />
+          </div>
+          <br />
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cancelar
+        </button>
+        <button id="guardarCambiosBtn" type="button" class="btn btn-primary">
+          Editar
+        </button>
+      </div>
     </div>
-
-    <script>
-        $(document).ready(function () {
-            $('#ProductoTable').DataTable();
-        });
-    </script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const editButtons = document.querySelectorAll('.edit-btn');
-            const editForm = document.getElementById('editForm');
-            const guardarCambiosBtn = document.getElementById('guardarCambiosBtn');
-            let saveChangesUrl = '';
-
-            editButtons.forEach(button => {
-                button.addEventListener('click', function (event) {
-                    event.preventDefault();
-                    const productoData = JSON.parse(button.getAttribute('data-cliente'));
-                    const editProductoInput = document.getElementById('editProducto');
-                    const editCategoriaInput = document.getElementById('editCategoria');
-                    const editExistenciaInput = document.getElementById('editExistencia');
-
-                    editProductoInput.value = productoData.producto;
-                    //editCategoriaInput.value = productoData.id_categoria;
-                    editExistenciaInput.value = productoData.existencia;
-                    saveChangesUrl = '<?php echo site_url("ProductoController/guardarCambios/' + productoData.id_producto + '"); ?>';
-                    editCategoriaInput.querySelector(`option[value="${productoData.id_categoria}"]`).selected = true;
-                    $('#editarModal').modal('show');
-
-                });
-            });
-
-            guardarCambiosBtn.addEventListener('click', function (event) {
-                if (saveChangesUrl) {
-                    editForm.action = saveChangesUrl;
-                    editForm.submit(); // Envía el formulario
-                }
-            });
-        });
-    </script>
-
-
-    <script>
-        const deleteLinks = document.querySelectorAll('.delete-btn');
-
-        deleteLinks.forEach(link => {
-            link.addEventListener('click', function (event) {
-                event.preventDefault();
-
-                const deleteUrl = this.getAttribute('href');
-
-                Swal.fire({
-                    title: '¿Estás seguro?',
-                    text: "El producto será eliminado",
-                    icon: 'warning',
-                    showCancelButton: true,
-                    confirmButtonColor: '#3085d6',
-                    cancelButtonColor: '#d33',
-                    confirmButtonText: 'Sí, eliminar',
-                    cancelButtonText: 'Cancelar'
-                }).then((result) => {
-                    if (result.isConfirmed) {
-                        Swal.fire({
-                            title: 'Eliminado!',
-                            text: 'El producto ha sido eliminado',
-                            icon: 'success',
-                            confirmButtonColor: '#3085d6'
-                        }).then(() => {
-                            window.location.href = deleteUrl;
-                        });
-                    }
-                });
-            });
-        });
-    </script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.all.min.js"></script>
-</body>
-
-<router-outlet></router-outlet>
+  </div>
+</div>
