--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,34 +1,23 @@
 <body>
-    <div class="wrapper">
-    <div class="box">
-      <form action="" method="post">
-        <h2>Iniciar Sesión</h2><br>
-        <div class="inputBox">
-            <input type="text" id="username" name="usuario" required>
-            <div class="icon"><i class="fas fa-user"></i></div>
-            <label for="usuario">Nombre de Usuario</label>
-            <i></i>
-          </div><br>
-        <div class="inputBox">
-            <input type="password" id="password" name="clave" required>
-            <div class="icon"><i class="fas fa-key"></i></div>
-            <label for="clave">Contraseña</label>
-            <i></i>
-          </div>
-        <br><br>
-        <input type="submit" value="Login" onclick="encriptar_pass();">       
-    </form>
-    </div>
+  <div class="wrapper">
+  <div class="box">
+    <form (submit)="onSubmit()">
+      <h2>Iniciar Sesión</h2><br>
+      <div class="inputBox">
+        <input type="text" id="username" name="usuario" required [(ngModel)]="nombreUsuario">
+        <div class="icon"><i class="fas fa-user"></i></div>
+        <label for="usuario">Nombre de Usuario</label>
+        <i></i>
+        </div><br>
+      <div class="inputBox">
+          <input type="password" id="password" name="clave" required [(ngModel)]="claveUsuario">
+          <div class="icon"><i class="fas fa-key"></i></div>
+          <label for="clave">Contraseña</label>
+          <i></i>
+        </div>
+      <br><br>
+      <input type="submit" value="Login">       
+  </form>
   </div>
-
-  <script>
-    function encriptar_pass(){
-      var pass = $('#password').val();
-      var encriptada = btoa(pass);
-      $("#password").val(encriptada);
-    }
-  </script>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
-
+</div>
+</body>
