agregando guardian de rutas

--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -10,5 +10,11 @@
         <span class="label">{{ item.label }}</span>
       </a>
     </li>
+    <li>
+      <a (click)="onLogout()">
+        <i class="fa-solid fa-arrow-right-from-bracket"></i>
+        <span class="label">Cerrar Sesión</span>
+      </a>
+    </li>
   </ul>
 </div>
