--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,15 +1,16 @@
 <app-sidebar></app-sidebar>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">     
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css">
+
+ 
 <div style="text-align: center"><h1>PRODUCTOS</h1></div>
 <main>
   <div class="nuevo-producto">
-    <a
-      class="btn btn-success"
-      id="new"
-      style="float: right; margin-right: 2px"
-      [routerLink]="['/productos/createProducto']"
-    >
-      <i class="fa-solid fa-notes-medical"></i> Nuevo producto
-    </a>
+   
+    <a class="btn btn-success" id="new"
+    style="float: right; margin-right: 2px" [routerLink]="['./create']">Nuevo producto</a>
+
   </div>
   <div class="userList" id="userList">
     <table id="ProductoTable" class="table table-hover table-striped">
@@ -38,23 +39,22 @@
         <tr *ngFor="let producto of productos">
           <th scope="row">{{ producto.producto }}</th>
           <td>{{ producto.existencia }}</td>
-          <td>{{ producto.categoria.categoria }}</td>
+          <td>{{ getCategoriesName(producto.id_categoria) }}</td>
           <td class="td_boton">
             <a
               href=""
               class="edit-btn"
               data-bs-toggle="modal"
               data-bs-target="#editarModal"
-              data-cliente=""
+              (click)="editarProducto = producto"
               >Editar
             </a>
-            <a id="EliminarUsuario" href="" class="delete-btn">Eliminar </a>
+            <a id="EliminarProducto" class="delete-btn" (click)="borrar(producto)">Eliminar </a>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
-  <a [routerLink]="['./create']">hola</a>
 </main>
 <div
   class="modal fade"
@@ -83,15 +83,17 @@
               id="editProducto"
               name="editProducto"
               placeholder="Ingrese el nombre del producto"
+              [(ngModel)]="editarProducto.producto"
             />
           </div>
           <br />
           <div>
             <label for="editCategoria">Categoria </label>
-            <select id="editCategoria" name="editCategoria">
-              <option value=""></option>
+            <select id="editCategoria" name="editCategoria" [(ngModel)]="editarProducto.id_categoria">
+              <option *ngFor="let categoria of categorias" [value]="categoria.id_categoria">{{ categoria.categoria}}</option>
             </select>
           </div>
+          
           <br />
           <div>
             <label for="editExistencia">Existencia </label>
@@ -100,6 +102,7 @@
               id="editExistencia"
               name="editExistencia"
               placeholder="Ingrese la existencia"
+              [(ngModel)]="editarProducto.existencia"
             />
           </div>
           <br />
@@ -109,10 +112,15 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           Cancelar
         </button>
-        <button id="guardarCambiosBtn" type="button" class="btn btn-primary">
+        <button id="guardarCambiosBtn" type="button" class="btn btn-primary" (click)="update()" data-bs-dismiss="modal">
           Editar
         </button>
       </div>
     </div>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.all.min.js"></script>
+    
