avance de facturacion

--- a/src/app/pages/facturas/facturas.component.css
+++ b/src/app/pages/facturas/facturas.component.css
@@ -127,7 +127,7 @@ thead {
 
 .edit-btn:hover{
     text-decoration: none; 
-    background-color: #00FFEC ; 
+    background-color: #0d1212 ; 
 }
     .delete-btn:hover {
     text-decoration: none; 
