--- a/src/app/pages/facturas/facturas.component.html
+++ b/src/app/pages/facturas/facturas.component.html
@@ -1,20 +1,4 @@
 <app-sidebar></app-sidebar>
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-  crossorigin="anonymous"
-/>
-<link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-  crossorigin="anonymous"
-/>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css"
-/>
 
 <div style="text-align: center"><h1>Facturas</h1></div>
 <main>
@@ -23,7 +7,7 @@
       class="btn btn-success"
       id="new"
       style="float: right; margin-right: 2px"
-      [routerLink]="['./create']"
+      [routerLink]="['./new']"
       >Nueva Factura</a>
       <br><br><br>
   </div>
@@ -66,7 +50,7 @@
             <tr *ngFor="let factura of facturas">
                 <th scope="row">{{ factura.referencia }}</th>
                 <td>{{ getClientsName(factura.id_cliente) }}</td>
-                <td>{{ factura.fecha }}</td>
+                <td>{{ factura.fecha_crear }}</td>
                 <td>{{ factura.serie }}</td>
                 <td>{{ factura.numero }}</td>
                 <td>{{ factura.estado }}</td>
@@ -80,10 +64,3 @@
   </div>
 </main>
 
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-  crossorigin="anonymous"
-></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.all.min.js"></script>
