Corrigiendo detalles en los CRUD USUARIOS Y PROVEEDORES

--- a/src/app/pages/proveedores/proveedores.component.html
+++ b/src/app/pages/proveedores/proveedores.component.html
@@ -14,23 +14,23 @@
                     <tr>
                         <th>
                             <i class="fa-solid fa-pen-to-square" style="color: #e63946;"></i>
-                            id
+                            Id
                         </th>
                         <th>
-                            <i class="fa-solid fa-boxes-stacked" style="color: #e63946;"></i>
-                            proveedor
+                          <i class="fa-solid fa-user" style="color: #e63946;"></i>
+                            Proveedor
                         </th>
                         <th>
-                            <i class="fa-solid fa-list" style="color: #e63946;"></i>
-                            nit
+                          <i class="fa-solid fa-file-invoice" style="color: #e63946;"></i>
+                          Nit
                         </th>
                         <th>
-                            <i class="fa-solid fa-list" style="color: #e63946;"></i>
-                            direccion
+                          <i class="fa-solid fa-location-dot" style="color: #e63946;"></i>
+                            Direccion
                         </th>
                         <th>
-                            <i class="fa-solid fa-list" style="color: #e63946;"></i>
-                            telefono
+                          <i class="fa-solid fa-phone" style="color: #e63946;"></i>
+                            Telefono
                         </th>
                         <th>
                             <i class="fa-solid fa-bolt" style="color: #e63946;"></i>
