--- a/src/app/pages/compras/compras.component.html
+++ b/src/app/pages/compras/compras.component.html
@@ -1,7 +1,5 @@
 <app-sidebar></app-sidebar>
-<header>
-    <h1>Compras</h1>
-</header>
+<div style="text-align: center"><h1>COMPRAS</h1></div>
 <main>
     <div class="nuevo-producto">
         <a class="btn btn-success" id="new" style="float: right; margin-right: 2px;"
