addin create purcharse
agregando vista de creacion de compra

--- a/src/app/pages/usuarios/crearusuario/crearusuario.component.html
+++ b/src/app/pages/usuarios/crearusuario/crearusuario.component.html
@@ -7,7 +7,7 @@
 <section>
     <div class="form-box">
         <div class="form-value">
-            <h2>Crear Cliente</h2>
+            <h2>Crear Usuario</h2>
             <form id="userForm">
                 <div class="inputbox">
                     <i class="fa-solid fa-user fa-lg"></i>
@@ -17,7 +17,7 @@
                 <div class="inputbox">
                     <i class="fa-solid fa-pen"></i>
                     <input type="password" id="claves" name="claves" #claves required>
-                    <label for="claves">claves</label>
+                    <label for="claves">clave</label>
                 </div>
                 <div class="rol-select">
                     <div class="row-select">
