--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -40,7 +40,7 @@
                     <td>{{usuario.usuario}}</td>
                     <td>{{usuario.clave}}</td>
                     <td>
-                      {{usuario.id_rol === 1 ? 'Administrador' : (usuario.id_rol ===2 ? 'Usuario' : 'Otro')}}
+                      {{usuario.id_rol == 1 ? 'Administrador' : (usuario.id_rol == 2 ? 'Usuario' : 'Otro')}}
 
                     </td>
                     <td class="td_boton">
