--- a/src/app/pages/usuarios/crearusuario/crearusuario.component.html
+++ b/src/app/pages/usuarios/crearusuario/crearusuario.component.html
@@ -32,7 +32,7 @@
                     
                 </div>
                 
-                <button (click)="crearCliente(usuario.value, claves.value, parseRole(role.value))">Crear Cliente</button>
+                <button (click)="crearCliente(usuario.value, claves.value, parseRole(role.value))">Crear Usuario</button>
             </form>
         </div>
     </div>
